# cftime

./: .appveyor.yml  .buildinfo  .coveragerc  .gitignore  .travis.yml  .travis.yml.legacy  COPYING  Changelog  MANIFEST.in  README.md  README.release  api.html  appveyor.yml  genindex.html  index.html  installing.html  jd_calcalcs.py  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup.txt
.github/workflows/: build.yml  cibuildwheel.yml  deploy-docs.yml  miniconda-win.yml  miniconda.yml  publish.yml  tests_conda.yml  tests_latest.yml
cftime/: __init__.py  _calcalcs.pyx  _cftime.py  _cftime.pyx  _cftime_utils.pyx  calcalcs.py
ci/: deploy_docs.sh  deploy_key.enc  requirements-2.6.yml  requirements-2.7.yml  requirements-3.4.yml  requirements-3.5.yml  requirements-3.6.yml  requirements.yml
conda.recipe/: meta.yaml
docs/: Makefile  api.html  api.rst  conf.py  genindex.html  index.rst  installing.html  installing.rst  make.bat  searchindex.js
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installing.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installing.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: api.rst.txt  index.rst.txt  installing.rst.txt
docs/_build/linkcheck/: output.json
docs/_sources/: index.rst.txt
netcdftime/: __init__.py  _netcdftime.c  _netcdftime.pyx
src/cftime/: __init__.py  _cftime.pyx  _cftime_legacy.pyx  _strptime.py
test/: benchmark.py  test_cast_to_int.py  test_cftime.py  test_netcdftime.py
